--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <link rel="stylesheet" href="style.css">
     <link href="https://uploads-ssl.webflow.com/5ebc456382a07e6fa48a4ea7/css/the-spaced-app.webflow.79b14477c.css" rel="stylesheet" type="text/css" />
     <style>
+        
+        .d-btn{
+            padding: 15px;
+            background-color: blueviolet;
+            font-style: none;
+            color: aliceblue;
+            font-size: 25px;
+             border-radius: 30px;
+             text-decoration: none;
+
+        }
       .hero-heading{
         background: var(--purple);
   background: -webkit-linear-gradient(to right, var(--purple), var(--yellow)); 
@@ -519,6 +530,11 @@
             width: 100vw;
             height: 4000px;
             background-color: black;
+            color: aliceblue;
+            font-size: 50px;
+            text-align: center;
+        align-items: center;
+        padding-top: 100px;
         }
     </style>
     <script>
@@ -645,7 +661,9 @@ return false;"></a></div>
                     </div>
                     <div data-w-id="8b2d5c2d-60e9-2df6-0868-2f788d316c66" class="list-item">
                         <p class="main-p-list">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, asperiores.</p>
+                        
                     </div>
+                    <a href="#" class="d-btn">Download Now</a>
                 </div>
             </div>
             <div data-w-id="dafb02e2-455f-d37f-1777-b07f495a0614" class="second-phone-icon-wrap"><img src="https://uploads-ssl.webflow.com/5ebc456382a07e6fa48a4ea7/5ebc456382a07e47c28a4ecc_2-phone-L3.png" alt="Illustration of mans face with mask on." data-w-id="9c9d8cf2-75d7-87cd-da0a-56cea5c7a981" class="phone-icon-3" /><img src="https://uploads-ssl.webflow.com/5ebc456382a07e6fa48a4ea7/5ebc456382a07e5c088a4ecd_2-phone-L2.png"
@@ -689,7 +707,7 @@ return false;"></a></div>
                         class="parallax-image" /><img src="https://uploads-ssl.webflow.com/5ebc456382a07e6fa48a4ea7/5f4ebc678d8a4d68d4b6711c_too-close.jpg" alt="app screen - yellow" class="parallax-image" /></div>
             </div>
         </div>
-       <div class="demmo"></div>
+       <div class="demmo">felomee on building process..</div>
     </main>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5ebc456382a07e6fa48a4ea7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://uploads-ssl.webflow.com/5ebc456382a07e6fa48a4ea7/js/webflow.9ddc437d1.js" type="text/javascript"></script>
