--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@ return false;"></a></div>
     </script>
 <script src="script.js"></script>
 
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </body>
 
 </html>
