--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
     <link href="https://uploads-ssl.webflow.com/5ebc456382a07e6fa48a4ea7/css/the-spaced-app.webflow.79b14477c.css" rel="stylesheet" type="text/css" />
     <style>
         
@@ -736,7 +736,7 @@ return false;"></a></div>
             }, 4700);
         }
     </script>
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </body>
