--- a/index.html
+++ b/index.html
@@ -813,10 +813,10 @@ return false;"></a></div>
                     <label for="two">two</label>
                 </div>
                 <div id="Cars2" class="desc">
-                  <img src="/assets/img/aipic1.png" alt="" class="aipic1">
+                  <img src="assets/img/aipic1.png" alt="" class="aipic1">
                 </div>
                 <div id="Cars3" class="desc" style="display: none;">
-                    <img src="/assets/img/aipic2.png" alt="" class="aipic1">
+                    <img src="assets/img/aipic2.png" alt="" class="aipic1">
                 </div>
             </div>
         </section>
