--- a/index.html
+++ b/index.html
@@ -893,6 +893,15 @@ return false;"></a></div>
                         alt="app screen - yellow" class="parallax-image" /></div>
             </div>
         </div>
+        <section id="download-sec">
+            <div class="dnd-div">
+                <h1 class="h1-dnd">Lorem ipsum dolor sit amet.</h1>
+                <p class="p-dnd">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eius doloribus quibusdam eligendi deserunt exercitationem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti voluptate consequatur animi accusantium dolore non ut iusto repellat obcaecati iste quaerat quibusdam, sapiente voluptatum hic cumque placeat soluta quae blanditiis?</p>
+                <a href="" class="dnd-button">Download Now</a>
+
+                <img src="assets/img/mob1.png" alt="" class="img-nd">
+            </div>
+        </section>
         <div class="demmo">felomee on building process..</div>
     </main>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5ebc456382a07e6fa48a4ea7"
