--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@ return false;"></a></div>
             <div data-w-id="345066f5-b01a-ab25-5116-b9f032ff04b5" class="bg-circle"></div>
             <div class="text-wrap">
 
-                <h1 data-w-id="5837a959-2eaa-b77c-6216-1bf7541f16c6" class="hero-heading">Welcome felomee.ai</h1>
+                <h1 data-w-id="5837a959-2eaa-b77c-6216-1bf7541f16c6" class="wlcm">Welcome felomee.ai</h1>
                 <p data-w-id="f0342d88-e0fa-f904-cd75-30e504287834" class="main-p">Lorem ipsum dolor sit amet
                     consectetur adipisicing elit. Sed saepe ipsum impedit dolores est! Dolores tempore rem dolore
                     officia distinctio? Quasi delectus consequuntur nulla ipsa ab ullam soluta atque excepturi.</p>
