--- a/index.html
+++ b/index.html
@@ -670,11 +670,10 @@
             <div class="menu" id="menu">
                 <ul class="menu-block">
                     <li class="menu-item"><a class="menu-link" href="#">Home</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#">Parents</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#services">A.i</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#Projects">Students</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#why-us">Resorces</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#">Contact</a></li>
+                    <li class="menu-item"><a class="menu-link" href="#">Students</a></li>
+                    <li class="menu-item"><a class="menu-link" href="#services">Parents</a></li>
+                    <li class="menu-item"><a class="menu-link" href="#Projects">a.i</a></li>
+                  
                 </ul>
             </div>
             </nav>
@@ -908,7 +907,7 @@
                                            
                                             <div class="cta-text">
                                                 <h4>Find us</h4>
-                                                <span>1010 Avenue, sw 54321, chandigarh</span>
+                                                <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</span>
                                             </div>
                                         </div>
                                     </div>
