--- a/index.html
+++ b/index.html
@@ -671,8 +671,8 @@
                 <ul class="menu-block">
                     <li class="menu-item"><a class="menu-link" href="#">Home</a></li>
                     <li class="menu-item"><a class="menu-link" href="#">Students</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#services">Parents</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#Projects">a.i</a></li>
+                    <li class="menu-item"><a class="menu-link" href="#">Parents</a></li>
+                    <li class="menu-item"><a class="menu-link" href="#">a.i</a></li>
                   
                 </ul>
             </div>
