--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 }
         
                 .scrolling-thumbs-container {
-                    background: url("assets/img/648658.jpg");
+                    background-color: white !important;
                 }
         
                 .hero {
