--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     data-wf-site="5ebc456382a07e6fa48a4ea7" data-wf-status="1">
 
     <head>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
+        <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="assets/css/footer.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" ></script>
