--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <meta name="viewport" content="width=device-width"> -->
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/wepkit.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"></script>
-
     <link rel="stylesheet" href="assets/css/style.css">
    
         <link rel="stylesheet" href="assets/css/home.css">
     <link rel="stylesheet" href="assets/css/nav.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://kit.fontawesome.com/5a6770305c.js" crossorigin="anonymous"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -85,7 +83,7 @@
 </head>
 
 <body class="body">
-    <header class="header-scroll  header">
+     <header class="header-scroll  header">
         <div class="nav-con">
             <a href="#">
                 <nav class=" navbar">
@@ -103,11 +101,12 @@
             <span class="overlay" id="overlay"></span>
             <div class="menu" id="menu">
                 <ul class="menu-block">
-                    <li class="menu-item"><a class="menu-link" href="#">Home</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#">Students</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#">Parents</a></li>
-                    <li class="menu-item"><a class="menu-link" href="#">a.i</a></li>
-
+                    <li class="  menu-item"><a class=" menu-link" href="#"><i class="fa-solid fa-house"></i> Home</a></li>
+                    <li class="menu-item"><a class="menu-link" href="#"><i class="fa-solid fa-graduation-cap"></i> Students</a></li>
+                    <li class="menu-item"><a class="menu-link" href="#">  <img class="icon64" src="assets/img/parents-icon.png" alt=""> Parents</a></li>
+                  
+                    <li class="menu-item"><a class="menu-link" href="#"><img class="icon64" src="assets/img/ai-icon.png" alt="">
+                        a.i</a></li>
                 </ul>
             </div>
             </nav>
@@ -195,7 +194,15 @@
         </div>
         <div class="div414">
             <div class="div286">
-                <img src="assets/img/mob44.png" alt="" class="img1286">
+                <img src="assets/img/mob22.webp" alt="" class="img1286">
+            </div>
+            <div class="ddiv76">
+                <h1 class="h747">Lorem ipsum dolor sit amet.</h1>
+                <p class="p645">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident vitae enim harum similique reiciendis ipsam, nemo labore illum quasi eum quod ducimus praesentium aspernatur fugit expedita perspiciatis repellendus quam nam explicabo eius. Ad, sapiente odit.</p>
+                <div class="div2686">
+                    <img src="assets/img/android-badge.png" alt="" class="download-icon">
+                    <img src="assets/img/ios-badge.png" alt="" class="download-icon">
+                </div>
             </div>
         </div>
      
@@ -316,90 +323,16 @@
             </div>
         </div> -->
 
-        <footer class="footer-section">
-            <div class="container">
-
-                <div class="footer-content pt-5 pb-5">
-                    <div class="row">
-                        <div class="col-xl-4 col-lg-4 mb-50">
-                            <div class="footer-widget">
-
-
-                                <div class="footer-social-icon">
-
-                                    <a href="#"><i class=" fab fa-facebook-f facebook-bg"></i></a>
-                                    <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
-                                    <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a>
-                                </div>
-                                <div class="">
-                                    <div class="col-xl-4 col-md-4 mb-30">
-                                        <div class="single-cta">
-
-                                            <div class="cta-text">
-                                                <h4>Find us</h4>
-                                                <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-4 col-md-4 mb-30">
-                                        <div class="single-cta">
-
-                                            <div class="cta-text">
-                                                <h4>Call us</h4>
-                                                <span>+9175858585</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-4 col-md-4 mb-30">
-                                        <div class="single-cta">
-
-                                            <div class="cta-text">
-                                                <h4>Mail us</h4>
-                                                <span>mail@info.com</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
-                            <div class="footer-widget">
-                                <div class="footer-widget-heading">
-                                    <h3>Useful Links</h3>
-                                </div>
-                                <ul>
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">about</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">contact us</a></li>
-
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
-                            <div class="footer-widget">
-                                <div class="footer-widget-heading">
-                                    <h3>Subscribe</h3>
-                                </div>
-
-                                <div class="subscribe-form">
-                                    <form action="#">
-                                        <input type="text" placeholder="Email Address">
-                                        <button><i class="fab fa-telegram-plane"></i></button>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-            <div class="copyright-area">
-
+        <footer>
+            <div class="footer-div">
+                <div class="div664"><h1>This a Footer Section</h1></div>
+                <div class="div447"></div>
+                <div class="div665"></div>
             </div>
         </footer>
 
     </main>
+  
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5ebc456382a07e6fa48a4ea7"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
