--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
     </div>
     <main id="luxy" class="main">
         <div data-w-id="60c4340a-af24-3bff-fb30-a730c03db9e5" class="lottie-wrap">
-           <img class="lottie21" src="assets/img/mobile2.svg" alt="">
+            <div data-w-id="b51709ce-afd5-029d-dc79-99d2ec884a3b" data-animation-type="lottie"
+                data-src="assets/js/5ebed222cf6b3474d2de12c9_Phone-5-15.json" data-loop="0" data-direction="1"
+                data-autoplay="0" data-is-ix2-target="1" data-renderer="canvas"
+                data-default-duration="1.2689355098532995" data-duration="0" class="lottie-phone"></div>
         </div>
         <div class="hero">
 
